AbstractSeries uses TreeSet rather than ArrayList for efficient sorting, grid lines can be drawn at points in an arithmetic sequence of the values (e.g. at 0,5,10,15,...) rather than at evenly spaced points in the view

--- a/ChartViewLib/res/values/attrs.xml
+++ b/ChartViewLib/res/values/attrs.xml
@@ -18,10 +18,14 @@
         <attr name="gridLineWidth" format="reference|dimension" />
         <attr name="gridLinesHorizontal" format="reference|integer" />
         <attr name="gridLinesVertical" format="reference|integer" />
+        <attr name="gridLinesXGap" format="reference|integer" />
+        <attr name="gridLinesYGap" format="reference|integer" />
         <attr name="leftLabelWidth" format="reference|dimension" />
         <attr name="topLabelHeight" format="reference|dimension" />
         <attr name="rightLabelWidth" format="reference|dimension" />
         <attr name="bottomLabelHeight" format="reference|dimension" />
+		<attr name="labelTextColor" format="reference|color" />
+		<attr name="labelTextSize" format="reference|dimension"/>
     </declare-styleable>
 
 </resources>
